# GhoulFrenzy

./: Cargo.toml  README.md  ambient.toml
.github/workflows/: deploy.yaml
src/: client.rs  server.rs
