[package]
name = "ghoul_frenzy"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", tag = "v0.3.1-nightly-2023-10-09" }

[[bin]]
name = "ghoul_frenzy_client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "ghoul_frenzy_server"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]